log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 05:03:49 PM UTC: 
 tests:  0|6
total_score: 0/70
384eec4
Fri 31 Mar 2023 05:13:54 PM UTC: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:19: error: ‘data’ undeclared (first use in this function)
   18 |   arreglo->data = data;
      |                   ^~~~
arraylist.c:18:19: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:19:21: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   19 |   arreglo->capacity = NULL;
      |                     ^
arraylist.c:20:17: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   20 |   arreglo->size = NULL;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
b4957f9
Fri 31 Mar 2023 05:17:02 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:21: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   19 |   arreglo->capacity = NULL;
      |                     ^
arraylist.c:20:17: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   20 |   arreglo->size = NULL;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
ba7a213
Fri 31 Mar 2023 05:17:52 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
ca9292e
Fri 31 Mar 2023 05:29:32 PM UTC: 
 arraylist.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
5e71694
Fri 31 Mar 2023 05:30:38 PM UTC: 
 arraylist.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
ac9e206
Fri 31 Mar 2023 05:38:41 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 20/70
7c480eb
Fri 31 Mar 2023 05:42:52 PM UTC: 
 arraylist.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:54:25: error: ‘ArrayList’ {aka ‘struct ArrayList’} has no member named ‘first’
   54 |   ArrayList* current = l->first;
      |                         ^~
arraylist.c:56:22: error: ‘ArrayList’ {aka ‘struct ArrayList’} has no member named ‘next’
   56 |     current = current->next;
      |                      ^~
Compilation failed
95ee7ba
Fri 31 Mar 2023 05:43:08 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:54:25: error: ‘ArrayList’ {aka ‘struct ArrayList’} has no member named ‘first’
   54 |   ArrayList* current = l->first;
      |                         ^~
arraylist.c:56:13: error: assignment to ‘ArrayList *’ {aka ‘struct ArrayList *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   56 |     current = current->size++;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
1b36828
Fri 31 Mar 2023 05:43:38 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:54:22: error: ‘ArrayList’ {aka ‘struct ArrayList’} has no member named ‘first’
   54 |   ArrayList* size = l->first;
      |                      ^~
arraylist.c:56:10: error: assignment to ‘ArrayList *’ {aka ‘struct ArrayList *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   56 |     size = size->size++;
      |          ^
arraylist.c:60:10: error: ‘current’ undeclared (first use in this function)
   60 |   return current->data;
      |          ^~~~~~~
arraylist.c:60:10: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
ab9b427
Fri 31 Mar 2023 05:43:56 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:54:22: error: ‘ArrayList’ {aka ‘struct ArrayList’} has no member named ‘first’
   54 |   ArrayList* size = l->first;
      |                      ^~
arraylist.c:56:10: error: assignment to ‘ArrayList *’ {aka ‘struct ArrayList *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   56 |     size = size->size++;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
8b7e816
Fri 31 Mar 2023 05:47:16 PM UTC: 
 arraylist.c | 17 ++++++++++-------
 1 file changed, 10 insertions(+), 7 deletions(-)
 tests:  6|3
total_score: 30/70
f387d21
Sun 02 Apr 2023 02:00:04 AM UTC: 
 arraylist.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  6|3
total_score: 30/70
1604d96
Sun 02 Apr 2023 02:14:00 AM UTC: 
 arraylist.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
arraylist.c:56:1: error: expected identifier or ‘(’ before ‘}’ token
   56 | }
      | ^
Compilation failed
9a6afbc
